# JobSearchAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: backend-python.mdc  project-direction.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/: alembic.ini  langgraph.docker.json  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_interviewed_status.py
backend/src/job_search_agent/: __init__.py  config.py  dev.py
backend/src/job_search_agent/agent/: __init__.py  graph.py  tools.py
backend/src/job_search_agent/api/: __init__.py  app.py  schemas.py
backend/src/job_search_agent/db/: models.py  repositories.py  session.py
backend/tests/: test_opportunity_repositories.py
docs/: architecture-plan.md  development.md  folder-structure-plan.md  todo.md  user-stories.md
src/job_search_agent/agent/: graph.py  tools.py
src/job_search_agent/api/: app.py  routes.py  schemas.py
src/job_search_agent/db/: repositories.py
ui/: .env.example  package.json  pnpm-lock.yaml
ui/apps/web/: package.json
ui/apps/web/src/app/: page.tsx
ui/apps/web/src/components/: opportunities-table.tsx
ui/apps/web/src/lib/: backend-api.ts
ui/apps/web/src/providers/: Stream.tsx  query.tsx
